# app_english

./: .env.example  .gitignore  LICENSE  README.md
.cursor/rules/: english-mastery-os.mdc  graph-based-code-review.mdc
.cursor/skills/english-mastery-os-build/: SKILL.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: activities.py  articles.py  cards.py  checkpoints.py  streak.py  weekly.py  youtube_transcript.py
backend/app/services/: __init__.py  sm2.py  streak_service.py  weekly_cycle.py
docs/obsidian-graphs/: module-articles-anki.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShell.tsx  FocusTimer.tsx  TimeBoxChallenge.tsx  XPBar.tsx
frontend/src/data/: activePracticeDialogues.ts
frontend/src/pages/: ActivePracticePage.tsx  ArticlesPage.tsx  DashboardPage.tsx  FlashcardsPage.tsx  SaturdayPage.tsx  ShadowingPage.tsx
